Url and baseurl changed to https://ubqfitweb.github.io/ and /ubqfitubqfit-marketing/

--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: UBQFIT
 email: your-email@example.com
 description: Your fitness partner - Live 1-on-1 Workouts. Train when you want, where you want, without commitments
 keywords: fitness app,fitness partner,gym,gym trainer app, health and fitness app, workout app, health app
-baseurl: "/ubqfit" # the subpath of your site, e.g. /blog
-url: "https://ubqfit.com/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/ubqfitubqfit-marketing/" # the subpath of your site, e.g. /blog
+url: "https://ubqfitweb.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
