--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: UBQFIT
 email: your-email@example.com
 description: Your fitness partner - Live 1-on-1 Workouts. Train when you want, where you want, without commitments
 keywords: fitness app,fitness partner,gym,gym trainer app, health and fitness app, workout app, health app
-baseurl: "ubqfitubqfit-marketing/" # the subpath of your site, e.g. /blog
+baseurl: "ubqfitubqfit-marketing" # the subpath of your site, e.g. /blog
 url: "https://ubqfitweb.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
