--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: Your fitness partner - Live 1-on-1 Workouts. Train when you want, w
 keywords: fitness app,fitness partner,gym,gym trainer app, health and fitness app, workout app, health app
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "https://ubqfit.com/" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "ubqfit-marketing" # the subpath of your site, e.g. /blog
-url: "https://https://ubqfitweb.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/ubqfit-marketing" # the subpath of your site, e.g. /blog
+url: "https://ubqfitweb.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
