--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-permalink: pretty
+# permalink: pretty
+permalink: none
 plugins:
   - jekyll-feed
   - jekyll-autoprefixer
