--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,9 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-permalink: pretty
-# permalink: none
+# permalink: pretty
+permalink: none
+
 plugins:
   - jekyll-feed
   - jekyll-autoprefixer
